# contour_editor-plugin

ContourEditor-Plugin/: .coverage  AGENTS.md  ARCHITECTURE_IMPROVEMENTS.md  BUILD_INSTRUCTIONS.md  BUILD_WHEEL.sh  ICON_REFACTORING_COMPLETE.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PHASE1_REFACTORING_COMPLETE.md  PHASE2_IMPLEMENTATION.md  PHASE2_PROGRESS_REVIEW.md  PHASE2_SUMMARY.txt  PHASE4_COMPLETE.md  PROJECT_STATUS.md  README.md  REFACTORING_COMPLETE.md  RUN_TESTS.sh  RUN_WORKPIECE_TESTS.sh  STAGE1_COMPLETE.md  STAGE2_COMPLETE.md  STAGE3_COMPLETE.md  STAGE5_COMPLETE.md  STAGE6_COMPLETE.md  TESTING_COMPLETE.md  TESTING_INFRASTRUCTURE_COMPLETE.md  TESTING_PLAN.md  WHATS_NEXT.txt  external_integration_example.py  migrate.py  preview.txt  pyproject.toml  pytest.ini  run_contour_editor.py  run_editor.py  run_segment_settings.py  run_workpiece_editor.py  setup.py  simple_workpiece_form.py  test_integration.py  (+1 more)
ContourEditor-Plugin/src/: public_api.py
ContourEditor-Plugin/src/contour_editor/: API_USAGE.md  __init__.py  builder.py  global_segment_settings.json
ContourEditor-Plugin/src/contour_editor_plugin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ContourEditor-Plugin/src/workpiece_editor/: __init__.py  builder.py
ContourEditor-Plugin/tests/: README.md  conftest.py  test_smoke.py
ContourEditor-Plugin/tests/fixtures/: test_data.py
ContourEditor-Plugin/tests/integration/: test_segment_workflow.py  test_settings_workflow.py  test_spray_pattern_workflow.py
ContourEditor-Plugin/tests/unit/: API_TEST_SUITE_README.md  TEST_ERROR_ANALYSIS.md  test_api_adapter.py  test_api_interfaces.py  test_api_providers.py  test_command_history.py  test_commands.py  test_contour_processing_service.py  test_icon_paths.py  test_models.py  test_segment_service.py  test_settings_service.py  test_wheel_zoom.py
(+213 files in other folders)
