[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contour-editor-plugin"
version = "1.0.0"
description = "Contour and Workpiece Editor Plugin for PyQt6 applications"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "ILV Team", email = "dev@example.com"}
]
keywords = ["contour", "editor", "workpiece", "pyqt6", "bezier", "segments"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Qt",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "PyQt6>=6.4.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
    "Pillow>=9.0.0",
    "shapely>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["contour_editor*"]
exclude = ["tests*", "*.tests", "*.tests.*", "workpiece_editor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers -p no:launch_pytest -p no:launch_testing -p no:launch_testing_ros"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

